<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Toggle Lineage Profiles</string>
    <string name="app_description">This app allows to quickly toggle any of the system profiles of LineageOS using a widget from the home screen.</string>
    <string name="pref_category_profile_icons_title">Profile icons</string>
    <string name="pref_category_colors_title">Icon colors</string>
    <string name="pref_category_profile_notifications_title">Notifications</string>
    <string name="pref_category_appearance_title">Appearance</string>
    <string name="pref_category_appearance_summary">The following settings control the appearance of the widget, allowing it to look like other application icons. Increase the margins to make the icon smaller. If you find that the widget icon is too small, even leaving the margin at 0, that is because the Android launcher imposes a minimum margin that cannot be overridden.</string>
    <string name="pref_category_other_title">More settings</string>
    <string name="pref_select_icon_title">Choose icon of \"%s\"</string>
    <string name="pref_foreground_color_title">Choose foreground color of the icons</string>
    <string name="pref_background_color_title">Choose background color of the icons</string>
    <string name="pref_notify_title">Notify when \"%s\" is activated</string>
    <string name="pref_text_size_title">Text size</string>
    <string name="pref_text_size_summary">Size of the label shown below the icon: %s.</string>
    <string name="pref_margin_top_title">Top margin</string>
    <string name="pref_margin_top_summary">Extra space above the icon: %s.</string>
    <string name="pref_margin_middle_title">Middle margin</string>
    <string name="pref_margin_middle_summary">Extra space between the icon and the text: %s.</string>
    <string name="pref_margin_bottom_title">Bottom margin</string>
    <string name="pref_margin_bottom_summary">Extra space below the text: %s.</string>
    <string name="pref_quick_toggle_title">Enable quick toggle</string>
    <string name="pref_quick_toggle_summary_off">When you click in the widget, a popup window will let you choose the new profile to activate.</string>
    <string name="pref_quick_toggle_summary_on">When you click in the widget, the next profile of the list will be activated. By clicking multiple times you advance to desired profile.</string>
    <string name="select_icon_dialog_title">Select the profile icon</string>
    <string name="color_picker_dialog_title">Select color</string>
    <string name="color_picker_argb">ARGB:</string>
    <string name="color_picker_hue">Hue</string>
    <string name="color_picker_saturation">Saturation</string>
    <string name="color_picker_luminance">Luminance</string>
    <string name="color_picker_alpha">Transparency</string>
    <string name="widget_loading">Loading…</string>
    <string name="widget_no_active_profile">No active profile</string>
    <string name="msg_no_lineageos">This app works only on Android versions based on LineageOS. Sorry, LineageOS has not been detected.</string>
    <string name="msg_disabled_profiles">The system profiles are not active. To activate them go to Settings / System Profiles.</string>
    <string name="msg_no_profiles">There is no system profile defined. To add some profile go to Settings / System Profiles.</string>
    <string name="notification_title">Profile \"%s\" activated</string>
    <string name="quick_settings_label">Toggle system profiles</string>
    <string name="error_get_list_profiles">Error getting the list of profiles: %s</string>
    <string name="error_get_active_profile">Error getting the active profile: %s</string>
    <string name="error_set_active_profile">Error activating the profile "%s": %s</string>
    <string name="notification_channel">Profile change</string>

    <string-array name="pref_text_size_entries">
        <item>Hidden</item>
        <item>10 dp</item>
        <item>11 dp</item>
        <item>12 dp</item>
        <item>13 dp</item>
        <item>14 dp</item>
        <item>15 dp</item>
        <item>16 dp</item>
        <item>17 dp</item>
        <item>18 dp</item>
        <item>19 dp</item>
        <item>20 dp</item>
    </string-array>
    <string-array name="pref_text_size_values">
        <item>0</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="pref_margin_entries">
        <item>0 dp</item>
        <item>2 dp</item>
        <item>4 dp</item>
        <item>6 dp</item>
        <item>8 dp</item>
        <item>10 dp</item>
        <item>12 dp</item>
        <item>14 dp</item>
        <item>16 dp</item>
        <item>18 dp</item>
        <item>20 dp</item>
        <item>22 dp</item>
        <item>24 dp</item>
        <item>26 dp</item>
        <item>28 dp</item>
        <item>30 dp</item>
    </string-array>
    <string-array name="pref_margin_values">
        <item>0</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
    </string-array>
</resources>
