<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/app_name">
    <PreferenceCategory
        android:key="category_profile_icons"
        android:title="@string/pref_category_profile_icons_title" />
    <PreferenceCategory android:title="@string/pref_category_colors_title">
        <com.saiho.togglelineageprofiles.preferences.ColorPickerPreference
            android:defaultValue="@color/default_icon_foreground"
            android:key="foreground_color"
            android:title="@string/pref_foreground_color_title"
            app:showTransparencyBar="false" />
        <com.saiho.togglelineageprofiles.preferences.ColorPickerPreference
            android:defaultValue="@color/default_icon_background"
            android:key="background_color"
            android:title="@string/pref_background_color_title"
            app:showTransparencyBar="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_appearance_title">
        <Preference
            android:selectable="false"
            android:summary="@string/pref_category_appearance_summary" />
        <ListPreference
            android:defaultValue="14"
            android:entries="@array/pref_text_size_entries"
            android:entryValues="@array/pref_text_size_values"
            android:key="text_size"
            android:summary="@string/pref_text_size_summary"
            android:title="@string/pref_text_size_title" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_margin_entries"
            android:entryValues="@array/pref_margin_values"
            android:key="margin_top"
            android:summary="@string/pref_margin_top_summary"
            android:title="@string/pref_margin_top_title" />|
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_margin_entries"
            android:entryValues="@array/pref_margin_values"
            android:key="margin_middle"
            android:summary="@string/pref_margin_middle_summary"
            android:title="@string/pref_margin_middle_title" />|
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_margin_entries"
            android:entryValues="@array/pref_margin_values"
            android:key="margin_bottom"
            android:summary="@string/pref_margin_bottom_summary"
            android:title="@string/pref_margin_bottom_title" />|
    </PreferenceCategory>
    <PreferenceCategory
        android:key="category_profile_notifications"
        android:title="@string/pref_category_profile_notifications_title" />
    <PreferenceCategory
        android:key="category_other"
        android:title="@string/pref_category_other_title">
        <SwitchPreference
            android:key="quick_toggle"
            android:summaryOff="@string/pref_quick_toggle_summary_off"
            android:summaryOn="@string/pref_quick_toggle_summary_on"
            android:title="@string/pref_quick_toggle_title" />
    </PreferenceCategory>
</PreferenceScreen>

