<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:minWidth="350dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/color_picker_hue_bar"
            android:text="@string/color_picker_hue"
            android:textAppearance="?android:textAppearanceMedium" />

        <com.saiho.togglelineageprofiles.preferences.ColorPickerBar
            android:id="@+id/color_picker_hue_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/color_picker_bar_height"
            android:paddingBottom="@dimen/color_picker_bar_vertical_padding"
            android:paddingTop="@dimen/color_picker_bar_vertical_padding"
            app:component="hue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:labelFor="@id/color_picker_saturation_bar"
            android:text="@string/color_picker_saturation"
            android:textAppearance="?android:textAppearanceMedium" />

        <com.saiho.togglelineageprofiles.preferences.ColorPickerBar
            android:id="@+id/color_picker_saturation_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/color_picker_bar_height"
            android:paddingBottom="@dimen/color_picker_bar_vertical_padding"
            android:paddingTop="@dimen/color_picker_bar_vertical_padding"
            app:component="saturation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:labelFor="@id/color_picker_luminance_bar"
            android:text="@string/color_picker_luminance"
            android:textAppearance="?android:textAppearanceMedium" />

        <com.saiho.togglelineageprofiles.preferences.ColorPickerBar
            android:id="@+id/color_picker_luminance_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/color_picker_bar_height"
            android:paddingBottom="@dimen/color_picker_bar_vertical_padding"
            android:paddingTop="@dimen/color_picker_bar_vertical_padding"
            app:component="luminance" />

        <TextView
            android:id="@+id/color_picker_alpha_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:labelFor="@id/color_picker_alpha_bar"
            android:text="@string/color_picker_alpha"
            android:textAppearance="?android:textAppearanceMedium" />

        <com.saiho.togglelineageprofiles.preferences.ColorPickerBar
            android:id="@+id/color_picker_alpha_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/color_picker_bar_height"
            android:paddingBottom="@dimen/color_picker_bar_vertical_padding"
            android:paddingTop="@dimen/color_picker_bar_vertical_padding"
            app:component="alpha" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="6dp"
                android:labelFor="@id/color_picker_hex_text"
                android:text="@string/color_picker_argb"
                android:textAppearance="?android:textAppearanceMedium" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/color_picker_hex_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:digits="0123456789ABCDEF"
                    android:ems="8"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters|textNoSuggestions"
                    android:maxLength="8"
                    android:singleLine="true"
                    android:importantForAutofill="no" />

            </FrameLayout>

            <ImageView
                android:id="@+id/color_picker_preview_image"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:foreground="@drawable/color_picker_pref_image_foreground"
                android:foregroundTint="?android:colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>